--- a/templates/programme1.html
+++ b/templates/programme1.html
@@ -2,101 +2,107 @@
 {% block title %} programme {% endblock %}
 {%block content %}
 <style>
-        /* Example 2: Background image with specific position and size */
-        .custom-position-size {
-            background-image: url('../static/assets/img/programmePic.jpg');
-             /* Set a specific size for the background image */
-             background-size: cover;
-            background-position: 0vh 80vh; /* Set a specific position (20px from left, 50px from top) */
-            height: 20vh;
-        }
-        .col img {
-          margin: 0%;
-          padding: 0%;
-        }
-
+  .col img {
+    margin: 0%;
+    padding: 0%;
+  }
 </style>
 
-<div class="container-fluid">
-  <div class="row">
-    <div class="custom-position-size " >
-      <div class="container m-5 text-light"><h1>Programmes</h1></div>
-    </div>
-  </div>
+<div
+  style="background-image: url('../static/assets/img/Testimonial-bg.jpg'); background-position: top 80%; background-size: cover; width: 100%; height: 150px;">
+  <h1 class="position-absolute ml-2" style="margin-top: 50px; color:white; margin-left: 120px;">Programme</h1>
 </div>
+
 {% for prog in progs %}
 <div class="container my-5">
   <div class="row">
     <div class="col">
-      <div class="mb-5 text-center"><h1>{{prog.progName}}</h1></div>
+      <div class="mb-5 text-center">
+        <h1>{{prog.progName}}</h1>
+      </div>
     </div>
   </div>
 
   <div class="row mt-5">
     <div class="">
       <ul class="nav justify-content-center nav-tabs nav-justified">
-        <li class="nav-item "><a class="nav-link active" data-bs-toggle="tab" href="#overview"><div class="">Programme Overview</div></a></li>
-        <li class="nav-item "><a class="nav-link" data-bs-toggle="tab" href="#outline"><div class="">Programme Outline</div></a></li>
-        <li class="nav-item "><a class="nav-link" data-bs-toggle="tab" href="#career"><div class="">Career Prospect</div></a></li>
-        <li class="nav-item "><a class="nav-link" data-bs-toggle="tab" href="#req"><div class="">Mininum Entry Requirement</div></a></li>
+        <li class="nav-item "><a class="nav-link active" data-bs-toggle="tab" href="#overview">
+            <div class="">Programme Overview</div>
+          </a></li>
+        <li class="nav-item "><a class="nav-link" data-bs-toggle="tab" href="#outline">
+            <div class="">Programme Outline</div>
+          </a></li>
+        <li class="nav-item "><a class="nav-link" data-bs-toggle="tab" href="#career">
+            <div class="">Career Prospect</div>
+          </a></li>
+        <li class="nav-item "><a class="nav-link" data-bs-toggle="tab" href="#req">
+            <div class="">Mininum Entry Requirement</div>
+          </a></li>
       </ul>
     </div>
   </div>
 
   <div class="container mt-4">
     <div class="tab-content">
-        <div id="overview" class="tab-pane fade show active">
-            <h4>Programme Overview:</h4>
-            <p>{{prog.progOverview}}</p>
-            <h4>Intake</h4>
-            <p>{{prog.progIntake}}</p>
-            <h4>Duration</h4>
-            <p>{{prog.progDuration}}</p>
-            <h4>Campus</h4>
-            <p>{{prog.progCampus}}</p>
-        </div>
-        <div id="outline" class="tab-pane fade">
-            <h4>Compulsory</h4>
+      <div id="overview" class="tab-pane fade show active">
+        <h4>Programme Overview:</h4>
+        <p>{{prog.progOverview}}</p>
+        <h4>Intake</h4>
+        <p>{{prog.progIntake}}</p>
+        <h4>Duration</h4>
+        <p>{{prog.progDuration}}</p>
+        <h4>Campus</h4>
+        <p>{{prog.progCampus}}</p>
+      </div>
+      <div id="outline" class="tab-pane fade">
+        <h4>Compulsory</h4>
+        <ul>
+          <li>Research Methodology</li>
+          <li>Doctoral Research</li>
+          <li>Special Topic</li>
+        </ul>
+      </div>
+      <div id="career" class="tab-pane fade">
+        <h4>Career Prospects</h4>
+        {%set careers = prog.progCareer.split("#")%}
+        {%for career in careers%}
+        <p>{{career}}</p>
+        {% endfor %}
+      </div>
+      <div id="req" class="tab-pane fade">
+        <ul>
+          <li>
+            <h4>Minimum Entry Requirements</h4>
             <ul>
-              <li>Research Methodology</li>
-              <li>Doctoral Research</li>
-              <li>Special Topic</li>
+              <li>A Master's Degree or equivalent AND candidates must have completed ONE (1) of their Degrees (Master's
+                or Bachelor's) in Computing or related to computing.</li>
             </ul>
-        </div>
-        <div id="career" class="tab-pane fade">
-            <h4>Career Prospects</h4>
-            {%set careers = prog.progCareer.split("#")%}
-            {%for career in careers%}
-            <p>{{career}}</p>
-            {% endfor %}
-        </div>
-        <div id="req" class="tab-pane fade">
+          </li>
+          <li>
+            <h4>English Language Requirements</h4>
             <ul>
-                <li><h4>Minimum Entry Requirements</h4>
-                    <ul>
-                        <li>A Master's Degree or equivalent AND candidates must have completed ONE (1) of their Degrees (Master's or Bachelor's) in Computing or related to computing.</li>
-                    </ul>
-                </li>
-                <li><h4>English Language Requirements</h4>
-                    <ul>
-                        <li><h5>Malaysian Students</h5>
-                            <ul>
-                                <li>MUET Band 4.0 or IELTS Band 6.0 or CEFR Mid B2 or TOEFL iBT 60 or equivalent; OR</li>
-                                <li>Exemption of English Language requirement if medium of instruction during Master studies was in English</li>
-                            </ul>
-                        </li>
-                        <li><h5>International Students</h5>
-                            <ul>
-                                <li>IELTS Band 6.0 or CEFR Mid B2, TOEFL iBT 60 or equivalent; OR</li>
-                                <li>Exemption of English Language requirement if medium of instruction during Master studies was in English</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
+              <li>
+                <h5>Malaysian Students</h5>
+                <ul>
+                  <li>MUET Band 4.0 or IELTS Band 6.0 or CEFR Mid B2 or TOEFL iBT 60 or equivalent; OR</li>
+                  <li>Exemption of English Language requirement if medium of instruction during Master studies was in
+                    English</li>
+                </ul>
+              </li>
+              <li>
+                <h5>International Students</h5>
+                <ul>
+                  <li>IELTS Band 6.0 or CEFR Mid B2, TOEFL iBT 60 or equivalent; OR</li>
+                  <li>Exemption of English Language requirement if medium of instruction during Master studies was in
+                    English</li>
+                </ul>
+              </li>
             </ul>
-        </div>
+          </li>
+        </ul>
+      </div>
     </div>
-</div>
-{% endfor %}
+  </div>
+  {% endfor %}
 </div>
 {% endblock %}
