--- a/templates/compareProg.html
+++ b/templates/compareProg.html
@@ -23,7 +23,7 @@
   </div>
 
   <div class="row mt-5">
-    <div class="col">
+    <div class="">
       <ul class="nav justify-content-center nav-tabs nav-justified">
         <li class="nav-item "><a class="nav-link active" data-bs-toggle="tab" href="#overview">
             <div class="">Programme Overview</div>
@@ -38,83 +38,109 @@
             <div class="">Career Prospect</div>
           </a></li>
       </ul>
+    </div>
+  </div>
 
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        
+        <div class="dropdown">
+          <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+            Select Programme
+          </button>
+          <ul class="dropdown-menu">
+            
+            {%for prog in progList %}
+            <li><a class="dropdown-item" href="#">{{prog.progName}}</a></li>
+            {% endfor %}
+          
+          </ul>
+        </div>
+      
+      </div>
 
+    </div>
+    <div class="container-fluid">
+      <div class="tab-content">
 
-      <div class="container mt-4">
-        <div class="tab-content">
-          <div id="overview" class="tab-pane fade show active">
-            <h4>Programme Overview:</h4>
+        <div id="overview" class="tab-pane fade show active">
+          <div class="row">
+            <div class="col">
 
-            <h4>Intake</h4>
+              <h4>Programme Overview:</h4>
+              <p>{{prog.progOverview}}</p>
+              <h4>Intake</h4>
+              {%set intakes = prog.progIntake.split("#")%}
+              {%for intake in intakes%}
+              <p>{{intake}}</p>
+              {% endfor %}
+              <h4>Duration</h4>
+              {%set durations = prog.progDuration.split("#")%}
+              {%for duration in durations%}
+              <p>{{duration}}</p>
+              {% endfor %}
+              <h4>Campus</h4>
+              {%set campuses = prog.progCampus.split("#")%}
+              {%for campus in campuses%}
+              <p>{{campus}}</p>
+              {% endfor %}
+            </div>
+            <div class="col">
+              <h4>Programme Overview:</h4>
 
-            <h4>Duration</h4>
+              <h4>Intake</h4>
 
-            <h4>Campus</h4>
+              <h4>Duration</h4>
 
-          </div>
-          <div id="outline" class="tab-pane fade">
-            <h4>Programme Outline:</h4>
-
-          </div>
-          <div id="career" class="tab-pane fade">
-            <h4>Career Prospects</h4>
-
-          </div>
-          <div id="req" class="tab-pane fade">
-            <h4>Entry Requirement</h4>
-            <img src="../static/assets/img/" class="img-fluid">
+              <h4>Campus</h4>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
 
-
-    <div class="col">
-      <ul class="nav justify-content-center nav-tabs nav-justified">
-        <li class="nav-item "><a class="nav-link active" data-bs-toggle="tab" href="#overview">
-            <div class="">Programme Overview</div>
-          </a></li>
-        <li class="nav-item "><a class="nav-link" data-bs-toggle="tab" href="#req">
-            <div class="">Mininum Entry Requirement</div>
-          </a></li>
-        <li class="nav-item "><a class="nav-link" data-bs-toggle="tab" href="#outline">
-            <div class="">Programme Outline</div>
-          </a></li>
-        <li class="nav-item "><a class="nav-link" data-bs-toggle="tab" href="#career">
-            <div class="">Career Prospect</div>
-          </a></li>
-      </ul>
-
-
-
-      <div class="container mt-4">
-        <div class="tab-content">
-          <div id="overview" class="tab-pane fade show active">
-            <h4>Programme Overview:</h4>
-
-            <h4>Intake</h4>
-
-            <h4>Duration</h4>
-
-            <h4>Campus</h4>
-
+        <div id="outline" class="tab-pane fade">
+          <div class="row">
+            <div class="col">
+              <h4>Programme Outline:</h4>
+              {%set outlines = prog.progOutline.split("#")%}
+              {%for outline in outlines%}
+              <p>{{outline}}</p>
+              {% endfor %}
+            </div>
+            <div class="col">
+              <h4>Programme Outline:</h4>
+            </div>
           </div>
-          <div id="outline" class="tab-pane fade">
-            <h4>Programme Outline:</h4>
-
+        </div>
+        <div id="career" class="tab-pane fade">
+          <div class="row">
+            <div class="col">
+              <h4>Career Prospects</h4>
+              {%set careers = prog.progCareer.split("#")%}
+              {%for career in careers%}
+              <p>{{career}}</p>
+              {% endfor %}
+            </div>
+            <div class="col">
+              <h4>Career Prospects</h4>
+            </div>
           </div>
-          <div id="career" class="tab-pane fade">
-            <h4>Career Prospects</h4>
-
-          </div>
-          <div id="req" class="tab-pane fade">
-            <h4>Entry Requirement</h4>
-            <img src="../static/assets/img/" class="img-fluid">
+        </div>
+        <div id="req" class="tab-pane fade">
+          <div class="row">
+            <div class="col">
+              <h4>Entry Requirement</h4>
+              <img src="../static/assets/img/{{prog.progReq}}" class="img-fluid">
+            </div>
+            <div class="col">
+              <h4>Entry Requirement</h4>
+              <img src="../static/assets/img/" class="img-fluid">
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+
 </div>
 {% endblock %}
