--- a/templates/enrollment.html
+++ b/templates/enrollment.html
@@ -9,7 +9,6 @@ Enrollment
     border: none;
   }
 
-  /* CSS for the pop-up */
 .popup {
     display: none;
     position: fixed;
@@ -20,19 +19,17 @@ Enrollment
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1;
     text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .popup-content {
     background-color: white;
     padding: 20px;
     border-radius: 5px;
-    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
-
-/* Add any additional styles as needed */
 
 </style>
 
@@ -132,10 +129,11 @@ Enrollment
 
   <!-- Add this within your HTML body -->
   <div id="eligibilityPopup" class="popup" style="display: none;">
-    <div class="popup-content">
-        <h2 id="popupMessageTitle"></h2>
+    <div class="popup-content px-5">
+        <h2 id="popupMessageTitle" class="my-2"></h2>
         <p id="popupMessageText"></p>
-        <button id="closePopup" class="btn btn-primary mx-2">Close</button>
+        <p><a href="{{ url_for('index')}}"></a></p>
+        <button id="closePopup" class="btn btn-primary ">Close</button>
     </div>
   </div>
 
@@ -413,7 +411,6 @@ Enrollment
 
 
     if (Object.keys(minRequirement).every((key) => selectedSubject.hasOwnProperty(key))) {
-      console.log("Enter first if");
       for (let req in minRequirement) {
         console.log(req);
         if (gradingSystem[minRequirement[req]] <= gradingSystem[selectedSubject[req]]) {
@@ -428,11 +425,11 @@ Enrollment
 
     if (isEligible) {
         // Eligible - Show success message in pop-up
-        showPopup("Success", "You are eligible for the program.");
+        showPopup("Success", "You are eligible for the program:");
         console.log('eligible');
     } else {
         // Not eligible - Show fail message in pop-up
-        showPopup("Fail", "You are not eligible for the program.");
+        showPopup("Fail", "You are not eligible for the program:");
         console.log('uneligible');
     }
 
@@ -502,10 +499,12 @@ function showPopup(title, message) {
     const popup = document.getElementById("eligibilityPopup");
     const popupTitle = document.getElementById("popupMessageTitle");
     const popupText = document.getElementById("popupMessageText");
-    const programme = document.getElementById("inputProgramme");
+    const programmeChose = document.getElementById("inputProgramme");
+
+    const selectedProgram = programmeChose.options[programmeChose.selectedIndex].text;
 
     popupTitle.textContent = title;
-    popupText.textContent = message;
+    popupText.innerHTML = message + "<br/>" + selectedProgram;
 
     popup.style.display = "block";
 
@@ -515,6 +514,7 @@ function showPopup(title, message) {
         popup.style.display = "none";
     });
 }
+
 
 </script>
 {%endblock %}
