--- a/templates/enrollment.html
+++ b/templates/enrollment.html
@@ -132,7 +132,7 @@ Enrollment
     <div class="popup-content px-5">
         <h2 id="popupMessageTitle" class="my-2"></h2>
         <p id="popupMessageText"></p>
-        <p><a href="{{ url_for('index')}}"></a></p>
+        <p><a href="{{ url_for('index')}}">>> Go back to Home Page</a></p>
         <button id="closePopup" class="btn btn-primary ">Close</button>
     </div>
   </div>
