--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
       }
 
       100% {
-        top: 0;
+        top: -100px;
         /* Adjust the final margin value as needed */
         z-index: 0;
         display: none;
@@ -65,7 +65,7 @@
 
     @keyframes slideDown {
       0% {
-        top: 0;
+        top: -100px;
         /* Start with no margin */
         z-index: 0;
         display: none;
@@ -92,8 +92,11 @@
       border: none;
     }
 
-
-
+    #animatedSearch {
+      width: 100%;
+      background-color: rgba(174, 169, 169, 0.9);
+      top: -100px
+    }
   </style>
 
   <!-- =======================================================
@@ -228,7 +231,7 @@
   <!-- End Header -->
   <!-- Search Bar Begin -->
   <form id="animatedSearch" action="{{url_for('searchProgramme')}}" method="POST"
-    class="position-fixed align-items-center" style="width:100%;background-color: rgba(174, 169, 169, 0.9);">
+    class="position-fixed align-items-center">
     <div class="container-fluid d-flex justify-content-center align-items-center p-3 ">
       <div class="w-100">
         <div class="row d-flex justify-content-center my-1 ">
