--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,10 @@
 </style>
 
 <main>
+<div class="container-fluid">
+  <h1>Test IP, Test IP {{ip_addr}} & {{device_name}} & {{browser_type}}</h1>
+</div>
+
   <div class="container-fluid p-0">
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
