--- a/templates/base.html
+++ b/templates/base.html
@@ -277,6 +277,15 @@
               ></iframe>
             </div>
           </div>
+
+          <div class="col-md">
+            <div class="list-menu">
+              <h4>Admin Panel</h4>
+              <a href="{{ url_for('login')}}" class="btn btn-primary"
+                >Login</a>
+            </div>
+          </div>
+
         </div>
         <div class="copyrights" style="background-color: #2a2c30">
           <div class="container">
