Fixed carousel issue

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,10 @@
       background-color: red !important;
     }
 
+    .void-overlap{
+      margin-top: 128px !important;
+    }
+
     @media (max-width: 991px) {
       .nav-cus {
         background-color: white;
@@ -246,7 +250,7 @@
     </div>
   </form>
   <!-- Search Bar Ends -->
-  <section>{%block content%} {%endblock%}</section>
+  <section class="void-overlap">{%block content%} {%endblock%}</section>
 
   <!-- ======= Footer ======= -->
   <footer class="footer">
