--- a/templates/login.html
+++ b/templates/login.html
@@ -89,37 +89,99 @@
   ======================================================== -->
   </head>
   <body>
-
-    <div class="container-fluid vh-100 d-flex justify-content-center align-items-center" style="background-color: #e4e6e9;">
-
-
-        <div class="container" style="background-image: url(../static/assets/img/bg2.jpg);">
-            <div class="Center-Text text-center">
-                <h1>
-                <a href="index.html"><img src="../static/assets/img/tarumt-logo1.png" class="img-fluid"/></a>
-                <br>
-                <span style="color: red;">TAR </span>
-                <span style="color: blue">UMT </span>
-                <span>Staff Intranet</span>
-                </h1>
+    <div
+      class="vh-100 d-flex justify-content-center align-items-center"
+      style="background-color: #dfe0e2"
+    >
+      <div
+        class="container"
+        style="
+          background: url(../static/assets/img/bg2.jpg) no-repeat;
+          background-size: cover;
+        "
+      >
+        <h3 class="text-center py-3">
+          <a href="{{ url_for('index')}}" class="text-decoration-none text-dark"
+            ><img src="../static/assets/img/tarumt-logo1.png" class="img-fluid"
+          /></a>
+          <br />
+          <span style="color: red">TAR </span>
+          <span style="color: blue">UMT </span>
+          <span>Staff Intranet </span>
+        </h3>
+        <div class="container py-5">
+          <div class="row d-flex justify-content-center">
+            <div class="col-12 col-md-8 col-lg-6">
+              <div class="card bg-white">
+                <div class="card-body p-5">
+                  <form class="mb-3 mt-md-4">
+                    <h3 class="text-center">
+                      <i
+                        class="fa-solid fa-leaf fa fa-lg"
+                        style="color: #64bd28; font-size: 1.3rem"
+                      ></i>
+                      Please Enter Your Information
+                    </h3>
+                    <hr />
+                    <div class="input-group mb-3">
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="User ID"
+                        aria-label="User ID"
+                        aria-describedby="basic-addon2"
+                      />
+                      <span class="input-group-text" id="basic-addon2"
+                        ><i class="ace-icon fa fa-user"></i
+                      ></span>
+                    </div>
+                    <div class="input-group mb-3">
+                      <input
+                        type="password"
+                        class="form-control"
+                        placeholder="Password"
+                        aria-label="Password"
+                        aria-describedby="basic-addon2"
+                      />
+                      <span class="input-group-text" id="basic-addon2"
+                        ><i class="ace-icon fa fa-lock"></i
+                      ></span>
+                    </div>
+                    <div class="input-group justify-content-end">
+                      <button
+                        class="btn"
+                        type="submit"
+                        style="border-radius: 0%; background-color: #1b6aaa"
+                      >
+                        <i class="ace-icon fa fa-key"></i> Login
+                      </button>
+                    </div>
+                  </form>
+                </div>
+                <div class="container-fluid" style="background-color: #5090c1">
+                  <a href="#" class="" style="color: #ffee99">
+                    <i class="ace-icon fa fa-arrow-left" sty></i>
+                    I forgot my password
+                  </a>
+                </div>
+              </div>
             </div>
-
-            <div class="container align-items-center">
-                
-            </div>
-
+          </div>
+          <div class="row justify-content-center d-flex text-center mt-3">
+            <span class="black small"><a style="color: #1b6aaa;" href="http://www.tarc.edu.my/disclaimer.jsp" target="_blank">DISCLAIMER</a> | <a style="color: #1b6aaa;" href="http://www.tarc.edu.my/privacy-policy.jsp" target="_blank">PRIVACY POLICY</a> | COPYRIGHT © 2023 TAR UMT. ALL RIGHTS RESERVED</span>
         </div>
-
+        </div>
+      </div>
     </div>
 
-      <!-- Vendor JS Files -->
-      <script src="assets/vendor/aos/aos.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-      <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-      <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-      <script src="assets/vendor/php-email-form/validate.js"></script>
-  
-      <!-- Template Main JS File -->
-      <script src="{{ url_for('static', filename='assets/js/main.js')}}"></script>
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
+
+    <!-- Template Main JS File -->
+    <script src="{{ url_for('static', filename='assets/js/main.js')}}"></script>
   </body>
 </html>
